fix mobile line break at <mark/>

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -29,6 +29,5 @@ mark {
     rgba(255, 225, 0, 0.7) 4%,
     rgba(255, 225, 0, 0.3)
   );
-  -webkit-box-decoration-break: clone;
   box-decoration-break: clone;
 }
